# nemotron-reasoning-challenge

./: .env.example  Makefile  README.md  pyproject.toml
notebooks/: eda.ipynb  nemotron_run_all.ipynb  nvidia-nemotron-sfttrainer-training.ipynb
src/models/: knn.py  logistic_regression.py  model.py
src/nemotron/: __init__.py  config.py  package_submission.py  train_lora.py
src/preprocessing/: preprocess.py
